src/test/deca/syntax/valid/objet/DeclarationClass2.deca
class Maclasse{
    protected int x;
    void setX(int x){
        this.x=x;
    }
}

{
    Maclasse x = new Maclasse();
    x.setX(3);
}