src/test/deca/syntax/invalid/sansObjet/OutOfBlock.deca
{
    println("Test Start");
    int x = 2020;
    println("x = "+x);
}
    x=x+1;